[tool.poetry]
name = "limeutils"
version = "0.2.12"
description = ""
authors = ["enchance <enchance@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.3.4"
pydantic = "^1.9.1"
hiredis = "^2.0.0"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
pytest = "*"
interrogate = "^1.5.0"
simple-print = "^1.6.0"
pytest-print = "^0.3.1"
pytest-sugar = "^0.9.5"
icecream = "^2.1.3"
markdown-include = "^0.7.0"
Pygments = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
